comment not working test